Issue on last commit: grass.jpg file too large changed to .png

--- a/css/snake_style.css
+++ b/css/snake_style.css
@@ -17,7 +17,7 @@ body{
 .console{
     position: relative;
     margin: 0 auto;
-    background-image: url("/img/grass.jpg");
+    background-image: url("/img/grass.png");
     background-size: cover;
     height: 450px;
     width: 925px;
